# image-editor

./: .gitignore  DEPLOYMENT.md  POEM.md  README.md  deploy-to-eks.yml.manual  hello_world.txt  simple-hello.txt
.github/workflows/: deploy-to-ec2.yml  deploy-to-ecr.yml  deploy-to-eks.yml  migrate-to-eks.yml  rolling-deployment.yml  setup-eks.yml
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
docs/: DEPLOYMENT.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/api/load-test/: route.ts
frontend/app/api/load-test/stop/: route.ts
frontend/app/api/metrics/: route.ts
frontend/app/api/process/: route.ts
frontend/components/: AsciiHeader.tsx  ImageUploader.tsx  LoadTester.tsx  MetricsDashboard.tsx  ProcessedResults.tsx  ProcessingOptions.tsx
k8s/: README.md  aws-load-balancer-controller-values.yaml  backend-deployment.yaml  frontend-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml
scripts/: deploy-to-ec2.sh  deploy-to-eks.sh  migrate-to-eks.sh
terraform/: alb.tf  compute.tf  eks-cluster.tf.example  main.tf  network.tf  security.tf
terraform/user-data/: backend.sh  frontend.sh
