[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
